css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');


:root {
    --primary-pink: hsl(0, 36%, 70%);
    --warning: hsl(0, 93%, 68%);
    --secondary-grey: hsl(0, 6%, 24%);
    --fs-heading: 4rem;
    --fs-paragraph: 1rem;
    --bottom-spacing: 1.3rem;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Josefin Sans', sans-serif;
    min-height: 100vh;
    font-size: var(--fs-paragraph);
    background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
}

main {
    display: flex;
    min-height: 100vh;
}

.info-section {
    width: 55%;
    /* display: flex;
    flex-direction: column;
    align-items: center; */
    /* justify-content:  center; */
}

.inner-div {
    margin: 0 auto;
    max-width: 400px;
    padding: 0 0.5rem;
}

.logo {
    padding-top: var(--fs-heading);
    margin-bottom: 10rem;
    width: 200px;
}

.image-section {
    width: 45%;
    background-image: url("../images/hero-desktop.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

h1 {
    font-size: var(--fs-heading);
    font-weight: 600;
    letter-spacing: .8rem;
    margin-bottom: var(--bottom-spacing);
    color: var(--secondary-grey);
}

.info-text {
    color: var(--primary-pink);
    --bottom-spacing: 2rem;
    margin-bottom: var(--bottom-spacing);
    line-height: 1.8;
    font-weight: 300;
}

.big-text {
    font-weight: 200;
    color: var(--primary-pink);
}

form {
    position: relative;
    width: 100%;
}

form input {
    outline: none;
    padding: 1.2rem 1.5rem;
    width: 100%;
    border-radius: 30px;
    border: 1px solid var(--primary-pink);
    font-size: var(--fs-paragraph);
    margin-bottom: 0.3rem;
    background: transparent;
    font: inherit;
}

form input:focus {
    box-shadow: 0 0 10px rgba(255, 192, 203, 0.8);
}

input::placeholder {
    font-family: inherit;
    font-size: var(--fs-paragraph);
    color: var(--primary-pink);
}

form button {
    border: none;
    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
    border-radius: 30px;
    padding: 1.2rem 3rem;
    position: absolute;
    top: -1px;
    right: 0;
    cursor: pointer;
    transition: all .5s ease-in-out;
    box-shadow: 0 5px 5px  rgba(255, 192, 203, 0.8);
}

form button:hover {
    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 80%, 86%));
}

.error-message {
    color: var(--warning);
    margin-left: 0.3rem;
    visibility: hidden;

}

.email-error-icon {
    position: absolute;
    top: 0;
    transform: translateY(65%);
    right: 8rem;
    visibility: hidden;
}


.image-mobile {
    display: none;
}

form.error input {
    border-color: var(--warning);
}

form.error .error-message, form.error .email-error-icon {
    visibility: visible;
}

@media (min-width: 700px) {
    .info-section {
        background-image: url("../images/bg-pattern-desktop.svg");
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
    }
}

@media (min-width: 700px) and (max-width: 950px) {
    :root {
        --fs-heading: 3rem
    }

    .inner-div {
        max-width: 450px;
        padding: 0 0.8rem;
    }
}

@media (max-width: 700px) {
    :root {
        --fs-heading: 3rem;
    }

    h1 {
        text-align: center;
    }

    .info-text {
        text-align: center;
    }

    .info-section {
        width: 100%;
    }

    .image-section {
        display: none;
    }

    .image-mobile {
        display: block;
        width: calc(100% + 16px);
        margin-left: -8px;
        margin-right: -8px;
        margin-bottom: 3rem;
    }

    .inner-div {
        margin: 0;
        max-width: 100%;
    }

    .logo {
        width: 150px;
        margin-bottom: 3rem;
        padding-left: 1.2rem;
    }

    form {
        margin-bottom: var(--bottom-spacing);
    }

    form input {
        padding: 1.1rem 1.3rem;
    }

    form button {
        padding: 1.1rem 2.2rem;
    }

    .email-error-icon {
        right: 7rem;
        transform: translateY(65%);
    }
}

@media (max-width: 375px) {
    :root {
        --fs-heading: 2.5rem;
        --fs-paragraph: .875rem;
    }

    form input {
        padding: 1rem 1.3rem;
        font: inherit;
    }

    form button {
        padding: 1rem 1.5rem;
    }

    .email-error-icon {
        right: 5rem;
        width: 20px;
        transform: translateY(68%);
    }

    .info-text {
        margin-bottom: 4rem;
    }
}

